# serializer version: 1
# name: test_bigfile_capped_emit[aqua_FreeSize_GSU9]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x128_MI16x16xybwCUb7RZ3_GxJWpXJ_YoEXQLPsdMtXobiF7aDaHVjo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x32_MI16x16x1dyuAbe8kHk-fdJ3sQhx4ETuuPPcm6byBRtbDX_HOzEg=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x64_MI16x16x1udWX9ytxLTzN7YlTTFkLN4WgVJkz2ewk4pH6CXIUIOA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x128_MI16x16xFh8S17sfZUKRFst-Ko_q5BMDdanXbXlv-LE02SqKatM=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x32_MI16x16x108v91WRRP0R1mve2YSzZwOOVVW4-JPFizlFJORT65Lo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x32x64_MI16x16x1kGa10HQ1SQU2ndtM8fHvZqJWXKuN4hOYm6eM7dPBovY=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[equality_gfx950_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1VBXEFkI1dyYVTq8C-w6fIzyz5BEg3ktIoM4Ovo1KTNI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2AHDONMaeOSDZyi2f7aHGu4GMdYPgIGcwD8v70HDc5Jo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2C5AnUcFApjarZLTJqIGG8aWWq6eY5I0G1fePX4LoxUA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2CBeL5i3CgA16IpXNuOxnA9qwUA8hvsXQBXTSR8WY3ro=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2J1l49aYEQ43Z1t2Xlp65pNDc1KQClsyRyVwh-7imOBA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT2LumHXuAT0_NTBCvhHXZXWl5f0Pon4VQfAc2YzSFd920=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[freesize_gfx942_F8NH_GSU]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT13X1OfLyRL9w-1ritBrAZT3tQ0r3w4EWiG_s8hI0N9p4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1AaKyUZ73Fr-kcNihHY3YXWyWZWmW4362t1SIWdnVMaQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1FlHZ3hKrHSsxXCY_dCQcTjIqkpLv7VCoGoaEfsWSPRo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1YfgDs0hgY7F4SfwH56WjkD5Ia9OPi3e-RL8H2wBNzmo=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1ZL7gJw2TH_x4qD_Fqv2Ajgdb82y1DrjKL13oZIRSjDI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_HA_S_SAB_SAV_MT1a0EIOBgPmxLwQnyycknWGl-R91YKCa7nEhozZ_Dnt04=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1201_I8II]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT128x1vHRqK60Vi6vNxUrvFx4lUq1a6-TT2KI5Fpz48rIeOf4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64KmTKaR9UWN5n5ZiUG5xbUs3-6xt_hlseAiE82-qxBaQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT16x64c3t6D3WxfRPtcGBUQy75y8-uB96OPPBFFzJr6FNVsJU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x119UwKINzNFnGznGCPv5n5pFot2GqdbamyNljD1dZ9Wc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x12N4BEKJ2dtEcpN3N7Za_Grrjhn3ts6ct_GlxRvd-L5w=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_I8II_BH_HA_I_SAV_UserArgs_MT256x139l1SYR_Lyu3FowgJPe2YXld38WXIfyOOS0ktfrfgz4=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx1250_GG]
  list([
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_3_NueDZppLwWi2FH-PU2ogypU0NvdywBoGTQmQTZf3s=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_DttxOZgl-QaowYTViVlc2aJbIuw-VjAXbZMvz-pDQuA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bljk_HSS_BH_Bias_GG_HA_S_SAV_UserArgs_uaQVH1dcCs2ZySNlEPpJ1pDHwHx2dZZmU8w8wIr8Bbw=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx90a_HSS_big]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI328Gex9zAYLrbdSwfDyyFkK9QMk81itu2L4m28CXGwK-8=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32A1V35rsoh67Fe6CpM7F7hSwIGNSUiYBlp6XwARLsjb4=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x128x32_MI32ngShDHuDrgNsWAVN8pj1P-ZBXNTSRCSO6rGjOtNpz-M=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x192x64_MI32KkxmI4U4p03swoscr0W5UIqpiTdB2EAYMuJ1QnG3uD0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xf5dn6v4LnISAO2NE5URvBT8uZJ_wdQcazmPitqs0uDA=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bljk_HSS_BH_UserArgs_MT128x32x64_MI32xgpgvhZlktlKaYEeh7wLAzElqwnhs9fFB4crqPXCJy3c=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[gfx950_origami_MX]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT18JPP9doszMXj1O9S1mV8Oo9JXagnLnJNsuPCVYsSDl0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1991DsxGLJ6-h7PPegEBt4qSO583LygmPJbJ9R_zZGhs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1B4boH2EUM7McOAcX0pDGyjfUKWvhbGDZjmMVLjHqruU=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1ERjpefHUoz_7O_xmbw7_nG8AIchb0bCYUGXGQ2BHDao=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1GRmIk_iaK457gRbJGm_pc4SNVPgNVH4QQ6rZQ4xiklY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_MX_B_Bias_HA_S_SAV_UserArgs_MT1LlxwpiVCZv6uaKsMBsrBczSTkc238iP-d8aT7fIAI7g=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[navi31_HSS]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1Hf9UYtNxZjPD7yfDfbsl9aKBZet7liLRP6KYD7v1m9o=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT1hmmgavEEkurTAZ9-nk9oRTXtR7mRE_k59VMAyRWcHfs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3Lf5VDb_kxjEFL4ys8jDeYChagbJl7oMorWF-7VqJDU0=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT3rRe6o_9Iv6AzNipo5OpjRTAAaeRd8zh3I2SlZfI9FiY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT45N2c1xOzwKv8UHO9F2Ii4izMLVJd2zadDajT1OJdCyQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_HSS_BH_Bias_HA_S_SAV_UserArgs_MT4xbBmMjX1Nm5sQWnCRx7Fa5oHJgrb0MZi0RFammPDkkE=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_Ailk]
  list([
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16CZaScaUxjgaChjw23BAQApo_KOk3_B2Apy6xp09ndWs=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16n6vsaC_77rQSdhUX9o-oA1mF_FlXTmL812j_zYsfPbc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16ZHVxgYiTV-pXX7A33d9Bw-HnxckG0SiQohp45DndoUI=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Ailk_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16PNlAi6jp8vGPVdjmN3wffWG8rw0PSxaARLH6cmohFjw=',
      'err': 0,
    }),
  ])
# ---
# name: test_bigfile_capped_emit[streamk_gfx942_S]
  list([
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x16_MI16x16NUxaswpi41021QBqODetgHSZM_1oG9eWXRjMupavB4I=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT112x256x32_MI16x16ebp2Dr4EvzbMKLRqo43Bvixyznh83bdv0ja-UFn_zEQ=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x16_MI16x16nqOpaEOg9XREMMUupgMsiqDuF4KVnkJnq4ZzK6J-tcc=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x128x32_MI16x16f4PSIlm0Qe5RMnWWj1MjfNthUiNHY6zR0gTk_Y75RlY=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x16_MI16x16SlEfHBVYVfLt67-RnYQbfetbkAVmPTG0pckDQo2lgtw=',
      'err': 0,
    }),
    dict({
      'basename': 'Cijk_Alik_Bjlk_S_B_UserArgs_MT128x160x32_MI16x16YiWs4yy0SpKFGc0JzD-d6J089W1Cs4_z-Jw25PUpTSQ=',
      'err': 0,
    }),
  ])
# ---
